# Default JVM options for Java applications in Airflow (Java 21 optimized)
-Xms512m
-Xmx2g
-XX:+UseG1GC
-XX:MaxGCPauseMillis=200
-XX:+UseStringDeduplication
-XX:+UnlockExperimentalVMOptions
-XX:+UseZGC
-Djava.awt.headless=true
-Dfile.encoding=UTF-8
-Djava.security.egd=file:/dev/./urandom
-Duser.timezone=UTC
